# core

./: Cargo.toml
.github/workflows/: ci-cd.yaml
src/: error.rs  error_kind.rs  lib.rs
src/secrets/: bitwarden_secrets_manager.rs  mod.rs  secrets_manager.rs
tests/: test.rs
tests/secrets/: bitwarden_secrets_manager_test.rs  mod.rs
