[package]
name = "simpleg-core"
version = "5123.0.0"
edition = "2021"
description = "Core utilities for SimpleG"
license = "MIT"

[dependencies]

async-trait = "0.1.80"

bitwarden = "0.4.0"

serde = "1.0.203"
serde_json = "1.0.117"

uuid = { version = "1.9.0", features = ["v4"] }

[dev-dependencies]

tokio = { version = "1.38.0", features = ["full"] }